--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2342,9 +2342,9 @@
     <string name="pin_failed">SIM PIN operation failed!</string>
 
     <!-- Advanced (used for diagnostics) device info activity title [CHAR LIMIT=40] -->
-    <string name="device_info_settings" product="tablet">Tablet status</string>
+    <string name="device_info_settings" product="tablet">About tablet</string>
     <!-- Advanced (used for diagnostics) device info activity title [CHAR LIMIT=40] -->
-    <string name="device_info_settings" product="default">Phone status</string>
+    <string name="device_info_settings" product="default">About phone</string>
 
     <!-- About phone screen, list item title.  Takes the user to the screen for seeing and installing system updates. [CHAR LIMIT=40] -->
     <string name="system_update_settings_list_item_title">System updates</string>
